--- a/icenine/app/styles/_mixins.scss
+++ b/icenine/app/styles/_mixins.scss
@@ -2,11 +2,12 @@
   background-color: #FFF !important;
   max-width: 40px;
   max-height: 40px;
+  width: 40px;
+  height: 40px;
   text-align: center;
-  line-height: 40px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: center !important;
+  justify-content: center !important;
   & > i {
     color: $SITE_GREY;
     text-decoration: none;
