--- a/icenine/app/styles/_post.scss
+++ b/icenine/app/styles/_post.scss
@@ -188,8 +188,6 @@
     }
     .icon-button {
       min-width: 40px;
-      margin-left: 18px;
-      margin-right: 18px;
     }
   }
 }
